--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ buildscript {
 
 plugins {
     id 'maven-publish'
-    id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
@@ -29,7 +28,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    mappings channel: 'official', version: '1.19.2'
+    mappings channel: 'official', version: '1.18.2'
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -107,13 +106,13 @@ mixin {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.2-43.1.15'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.1.79'
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
 
 jar {
-    archiveName = "AnvilNeverTooExpensive-${version}.${extension}"
+    archiveName = "AnvilNeverTooExpensive-1.18.2-${version}.${extension}"
 
     manifest {
         attributes([
