--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'pmd'
 
-version = '1.0'
+version = '1.1'
 group = 'com.kuraion.ante'
 archivesBaseName = 'ante'
 
@@ -113,7 +113,7 @@ dependencies {
 }
 
 jar {
-    archiveName = "AnvilNeverTooExpensive-${version}.${extension}"
+    archiveName = "AnvilNeverTooExpensive-1.19-${version}.${extension}"
 
     manifest {
         attributes([
