--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,14 +8,14 @@ version="1.1"
 displayName="Anvil Never Too Expensive"
 credits="Huge credit to my constant anger towards the 'Too Expensive' message in the anvil GUI!"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/anvil-never-too-expensive"
-authors="Kuraion"
+authors="tinytransfem"
 logoFile="logo.png"
 description='''Removes the level cap in the anvil GUI.'''
 
 [[dependencies.ante]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.19,]"
+    versionRange="[1.19.4,]"
     ordering="NONE"
     side="BOTH"
 
